# rustparticles

./: .gitmodules  game.sublime-workspace
repo/: Cargo.toml  build.rs
repo/src/: main.rs
repo/src/shaders/: triangle_fs.glsl  triangle_vs.glsl
