[package]
name = "game"
version = "0.1.0"
authors = ["Declan White <deco.da.man@gmail.com>"]
build = "build.rs"

[dependencies]
vulkano = { path = "deps/vulkano/vulkano" }
vulkano-win = { path = "deps/vulkano/vulkano-win" }
cgmath = "0.12.0"
image = "0.6.1"
winit = { path = "deps/winit" }
time = "0.1.35"
rand = "0.3"

[build-dependencies]
vk-sys = "0.2.2"
vulkano-shaders = "0.3.2"
